# Pong-SDL

./: CMakeLists.txt  README.md
src/: main.cpp
src/app/: App.cpp  App.hpp  ApplicationConfiguration.hpp  LichPP.cpp  LichPP.hpp
src/entities/: AbstractEntity.cpp  AbstractEntity.hpp  AiPaddle.cpp  AiPaddle.hpp  Ball.cpp  Ball.hpp  Player.cpp  Player.hpp
src/gamestates/: GameState.hpp  PlayState.cpp  PlayState.hpp  States.hpp  TitleState.cpp  TitleState.hpp
src/graphics/: Color.cpp  Color.hpp  Font.cpp  Font.hpp  Graphics.cpp  Graphics.hpp
src/input/: InputListener.hpp  InputMultiplexer.cpp  InputMultiplexer.hpp  PongInput.cpp  PongInput.hpp  PongInputProcessor.cpp  PongInputProcessor.hpp
src/managers/: AssetManager.cpp  AssetManager.hpp  GameStateManager.cpp  GameStateManager.hpp
src/math/: MathUtils.cpp  MathUtils.hpp  Rectangle.cpp  Rectangle.hpp  Vector2.cpp  Vector2.hpp
